// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Classic actions Action to set the details title 1`] = `
Object {
  "payload": Object {
    "title": "Events",
  },
  "type": "@@MT/EVENTS/SET_CLASSIC_DETAILS_TITLE",
}
`;

exports[`[STORE] - Classic actions Action to set the organizer title 1`] = `
Object {
  "payload": Object {
    "title": "Modern Tribe",
  },
  "type": "@@MT/EVENTS/SET_CLASSIC_ORGANIZERS_TITLE",
}
`;

exports[`[STORE] - Classic actions Should set initial state 1`] = `
Object {
  "payload": Object {},
  "type": "@@MT/EVENTS/CLASSIC_BLOCK/SET_INITIAL_STATE",
}
`;
